--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
             <div>
               <Start enabled={this.state.start}/>,
               <PlayersList players={this.state.players} connected={this.state.connected} />,
-              <Chat />
+              <Chat socket={socket} />
             </div>
           );
         }
