Dialog styles adapted

--- a/public/game.html
+++ b/public/game.html
@@ -291,15 +291,15 @@
 
 
     </script>
-    <dialog id="clueWindow">
-      <button id="giveClueAboutSuit">Suit Clue</button>
-      <button id="giveClueAboutNumber">Number Clue</button>
-      <button id="cancelClueWindow">x</button>
+    <dialog id="clueWindow" class="dialog">
+      <button class="button" id="giveClueAboutSuit">Suit Clue</button>
+      <button class="button" id="giveClueAboutNumber">Number Clue</button>
+      <button class="button" id="cancelClueWindow">Cancel</button>
     </dialog>
-    <dialog id="playOrDiscardWindow">
-      <button id="playCard">Play Card</button>
-      <button id="discard">Discard</button>
-      <button id="cancelPDWindow">x</button>
+    <dialog id="playOrDiscardWindow" class="dialog">
+      <button class="button" id="playCard">Play Card</button>
+      <button class="button" id="discard">Discard</button>
+      <button class="button" id="cancelPDWindow">Cancel</button>
     </dialog>
   </body>
 </html>
