--- a/public/game.html
+++ b/public/game.html
@@ -119,11 +119,11 @@
           return <VisCard suit={card.suit} number={card.number}/>
         },
         render: function() {
-          var dummies = [{number: "0", suit: "blue"},
-                         {number: "0", suit: "red"},
-                         {number: "0", suit: "green"},
-                         {number: "0", suit: "white"},
-                         {number: "0", suit: "yellow"}];
+          var dummies = [{number: "_", suit: "blue"},
+                         {number: "_", suit: "red"},
+                         {number: "_", suit: "green"},
+                         {number: "_", suit: "white"},
+                         {number: "_", suit: "yellow"}];
           this.props.cards.forEach(function(card) {
             dummies.forEach(function(dummy) {
               if(dummy.suit == card.suit) {
