Moved static file serving into the server js file.

--- a/public/game.html
+++ b/public/game.html
@@ -21,7 +21,7 @@
       var Chat = app.Chat;
 
       var gameID = location.search.split('=')[1];
-      var socket = io(":3001/" + gameID);
+      var socket = io("/" + gameID);
 
       var state
       var yourPlayerNum = 0
