GOT RID OF THOSE WEIRD COMMAS. Also fixed socket.io.js line in html file.

--- a/public/game.html
+++ b/public/game.html
@@ -8,7 +8,7 @@
     <script src="js/JSXTransformer.js"></script>
     <script src="js/jquery-1.11.1.js"></script>
     <script src="http://underscorejs.org/underscore-min.js"></script>
-    <script src="socket.io.js"></script>
+    <script src="socket.io/socket.io.js"></script>
   </head>
   <body>
     <div id="main"></div>
