Added underscore-min.js (to avoid cross-site http)

--- a/public/game.html
+++ b/public/game.html
@@ -7,7 +7,7 @@
     <script src="js/react.js"></script>
     <script src="js/JSXTransformer.js"></script>
     <script src="js/jquery-1.11.1.js"></script>
-    <script src="http://underscorejs.org/underscore-min.js"></script>
+    <script src="js/underscore-min.js"></script>
     <script src="socket.io/socket.io.js"></script>
   </head>
   <body>
