Favicon and renaming

--- a/public/game.html
+++ b/public/game.html
@@ -1,7 +1,7 @@
 <!-- template.html -->
 <html>
   <head>
-    <title>JSHanabi</title>
+    <title>Hanubi</title>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="js/react.js"></script>
