--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!-- template.html -->
 <html>
   <head>
-    <title>JSHanabi</title>
+    <title>Hanubi</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="js/react.js"></script>
     <script src="js/JSXTransformer.js"></script>
